--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
     "axios": "^0.26.0",
+    "babel-eslint": "^10.1.0",
     "babel-plugin-styled-components": "^2.0.6",
     "eslint-config-prettier": "^8.4.0",
     "eslint-plugin-import": "^2.25.4",
