--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,7 @@
 {
   "extends": ["prettier/prettier"],
   "plugins": ["react-hooks", "prettier"],
-  "parser": "babel-eslint",
+  "parser": "@babel/eslint-parser",
   "rules": {
     "prettier/prettier": "error",
     "react-hooks/rules-of-hooks": "error",
