--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@babel/core": "^7.17.5",
+    "@babel/core": "^7.17.8",
     "@types/styled-components": "^5.1.23",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
@@ -30,9 +30,10 @@
     "swr": "^1.2.2"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.17.0",
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
-    "eslint": "^8.9.0",
+    "eslint": "^8.11.0",
     "eslint-config-next": "12.1.0",
     "typescript": "4.5.5"
   }
