--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@babel/eslint-parser": "^7.17.0",
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
+    "@types/react-dom": "^18.0.6",
     "eslint": "^8.11.0",
     "eslint-config-next": "12.1.0",
     "typescript": "4.5.5"
