--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
     "eslint": "^8.11.0",
     "eslint-config-next": "12.1.0",
     "typescript": "4.5.5"
+  },
+  "engines": {
+    "node": "14.19.3"
   }
 }
