--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "17.0.2",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
     "redux-typescript": "^1.2.1",
     "styled-components": "^5.3.3",
     "styled-reset": "^4.4.2",
