--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-react": "^7.29.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "next": "12.1.0",
+    "next-redux-wrapper": "^7.0.5",
     "prettier": "^2.5.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
